# Market-Simulator

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  README_BOTS.md
backend/: .env.example  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
bot-engine/: README.md  go.mod
bot-trader/: README.md  pyproject.toml
bot-trader/src/bot_trader/: __init__.py  config.py  execution.py  main.py  rules_baseline.py  state.py
bot-trader/src/bot_trader/rl/: __init__.py  env.py  reward.py  train.py
bots-ciudad/: config.yaml  go.mod  go.sum  main.go
bots-v1/: .gitignore  README.md  bank.go  botkit_aliases.go  config.yaml  config_helpers.go  consumer.go  farmer.go  go.mod  humanize.go  installations.go  main.go  market_view.go  miner.go  money.go  primary_producer.go  producer.go  selling.go  sessions.sqlite  specialties.go  trader.go  transformer.go
docs/: 01 Global Resources.md  02 Industrial Resources.md  03 Final Products.md  arquitectura_mercado_agricola.md  catalogo_productos_recetas.md  diseno_mercado_agricola.md  documentacion_base_datos.md  funcionamiento_bots.md  patron_oro_sistema_bancario.md  schema.sql  system_design.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json
go-sdk/: README.md  config.example.yaml  go.mod  go.sum
infra/: .env.docker  Dockerfile  cities.json  docker-compose.yml  seed-config.json
market-client/: README.md  pyproject.toml
market-client/src/market_client/: __init__.py  exceptions.py  http.py  models.py  ws.py
specs/: schema.sql  (+1 more)
(+298 files in other folders)
