[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bot-trader"
version = "0.1.0"
description = "Agricultural Market Simulator ML Trader Bot"
requires-python = ">=3.12"
dependencies = [
    "market-client",
    "gymnasium>=1.1.0",
    "stable-baselines3>=2.6.0",
    "numpy>=2.0.0",
    "tensorboard>=2.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bot_trader"]
