[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-client"
version = "0.1.0"
description = "Python client library for the Agricultural Market Simulator API"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [
    { name = "World Team" },
]
dependencies = [
    "httpx>=0.28",
    "websockets>=15.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_client"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
